--- a/reddio-pay-sdk-ts/.gitignore
+++ b/reddio-pay-sdk-ts/.gitignore
@@ -1,19 +1,17 @@
 # Dependencies
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
-# Build output
+# Build outputs
 dist/
 *.tsbuildinfo
 
-# Environment variables
+# Environment files
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*.local
+
+# Test configuration (contains API keys)
+test-config.js
 
 # IDE files
 .vscode/
@@ -21,22 +19,12 @@ dist/
 *.swp
 *.swo
 
-# OS generated files
+# OS files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
 # Logs
-logs
 *.log
-
-# Coverage directory used by tools like istanbul
-coverage/
-*.lcov
-
-# Test results
-test-results/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
